[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/objs/ammo_uzi.obj" type="ArrayMesh" id=1]
[ext_resource path="res://src/player/playerBullet.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.339275, 0.473248, 1.19938 )

[node name="playerBullet" type="Area" groups=[
"bullet",
"player",
]]
script = ExtResource( 2 )

[node name="bulletTimer" type="Timer" parent="." groups=[
"bullet",
"player",
]]
wait_time = 3.0
one_shot = true
autostart = true

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 30, 0, 0, 0, -1.31134e-06, -30, 0, 30, -1.31134e-06, 0, 0.18908, 0 )
mesh = ExtResource( 1 )
material/0 = null
material/1 = null
material/2 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.17, 0 )
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_playerBullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_playerBullet_body_entered"]
[connection signal="timeout" from="bulletTimer" to="." method="_on_bulletTimer_timeout"]
